--- a/src/scss/header.scss
+++ b/src/scss/header.scss
@@ -19,7 +19,7 @@
 .header__subtitle {
   display: block;
   color: #ffffff;
-  font-family: Lato;
+  font-family: 'Lato-Regular';
   font-size: 26px;
   font-weight: 400;
   letter-spacing: 4.15px;
