--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -1,6 +1,8 @@
 @import "fonts.scss";
 @import "reset.scss";
 @import "header.scss";
+@import "about.scss";
+@import "portfolio.scss";
 
 body {
   font-family: sans-serif;
@@ -22,6 +24,18 @@ body {
 
 .title_color_black {
   color: #000000;
+  position: relative;
+}
+
+.title_color_black::after {
+  content: '';
+  display: block;
+  position: absolute;
+  width: 81px;
+  height: 1px;
+  background-color: #000000;
+  top: 82px;
+  left: 515px;
 }
 
 .title_weight_xl {
@@ -72,4 +86,14 @@ body {
 
 .read-more_btn_black {
   color: #000000;
+}
+
+.text {
+  color: #868585;
+  font-family: 'Lato-Regular';
+  font-size: 14px;
+  font-weight: 300;
+  line-height: 25.89px;
+  text-align: center;
+  max-width: 690px;
 }
