--- a/src/scss/main.css
+++ b/src/scss/main.css
@@ -1,3 +1,270 @@
+@font-face {
+  font-family: 'Lato-Black';
+  src: url("../assets/fonts/Lato-Black.eot"), url("../assets/fonts/Lato-Black.woff") format("woff"), url("../assets/fonts/Lato-Black.ttf") format("truetype"), url("../assets/fonts/Lato-Black.svg#webfont") format("svg");
+  font-weight: normal;
+  font-style: normal; }
+@font-face {
+  font-family: 'Lato-Light';
+  src: url("../assets/fonts/Lato-Light.eot"), url("../assets/fonts/Lato-Light.woff") format("woff"), url("../assets/fonts/Lato-Light.ttf") format("truetype"), url("../assets/fonts/Lato-Light.svg#webfont") format("svg");
+  font-weight: normal;
+  font-style: normal; }
+@font-face {
+  font-family: 'Lato-Regular';
+  src: url("../assets/fonts/Lato-Regular.eot"), url("../assets/fonts/Lato-Regular.woff") format("woff"), url("../assets/fonts/Lato-Regular.ttf") format("truetype"), url("../assets/fonts/Lato-Regular.svg#webfont") format("svg");
+  font-weight: normal;
+  font-style: normal; }
+@font-face {
+  font-family: 'MyriadPro-Regular';
+  src: url("../assets/fonts/MyriadPro-Regular.eot"), url("../assets/fonts/MyriadPro-Regular.woff") format("woff"), url("../assets/fonts/MyriadPro-Regular.ttf") format("truetype"), url("../assets/fonts/MyriadPro-Regular.svg#webfont") format("svg");
+  font-weight: normal;
+  font-style: normal; }
+* {
+  margin: 0;
+  padding: 0;
+  list-style: none;
+  text-decoration: none;
+  font-size: 100%;
+  box-sizing: border-box; }
 
+*::after, *::before {
+  box-sizing: border-box; }
+
+body, html {
+  overflow-x: hidden; }
+
+.header__banner {
+  background: url("../assets/img/banner.png") no-repeat center/cover;
+  padding: 250px 0; }
+  .header__banner .header__logo {
+    max-width: 200px;
+    max-height: 130px;
+    margin: 0 auto; }
+  .header__banner .header__text {
+    padding: 200px 0 250px; }
+    .header__banner .header__text .header__subtitle {
+      display: block;
+      color: #ffffff;
+      font-family: 'Lato-Regular';
+      font-size: 26px;
+      font-weight: 400;
+      letter-spacing: 4.15px;
+      text-align: center;
+      position: relative; }
+    .header__banner .header__text .header__subtitle::before {
+      content: '';
+      display: block;
+      width: 105px;
+      height: 2px;
+      position: absolute;
+      background: #ffffff;
+      top: 80px;
+      left: 45%; }
+
+.header__nav {
+  padding: 25px;
+  max-width: 450px;
+  margin: 0 auto; }
+
+.about {
+  padding: 95px 0 65px; }
+  .about .about__text {
+    margin: 75px auto; }
+
+.about__column {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding-top: 70px; }
+  .about__column .item-about {
+    flex-basis: 30%; }
+    .about__column .item-about .item-about__title {
+      color: #000000;
+      font-family: 'Lato-Regular';
+      font-size: 22px;
+      font-weight: 400;
+      text-transform: uppercase;
+      letter-spacing: 3.52px;
+      text-align: center;
+      margin-top: 40px; }
+    .about__column .item-about .item-about__icon {
+      width: 92px;
+      height: 92px;
+      margin: 0 auto; }
+    .about__column .item-about .item-about__text {
+      margin-top: 35px; }
+
+.portfolio {
+  padding: 110px 0 65px;
+  background: #f3f3f3; }
+  .portfolio .portfolio__nav {
+    max-width: 300px;
+    margin: 90px auto; }
+  .portfolio .portfolio__cards {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    flex-wrap: wrap;
+    padding-bottom: 65px; }
+
+.partners__banner {
+  background: url("../assets/img/partners-banner.png") no-repeat center/cover;
+  padding: 100px 0; }
+  .partners__banner .partners__title {
+    color: #ffffff;
+    font-family: 'Lato-Light';
+    font-size: 30px;
+    font-weight: 300;
+    letter-spacing: 1.8px;
+    text-align: center;
+    margin-bottom: 95px; }
+  .partners__banner .partners__logo-wrap {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin: 0 50px;
+    padding-left: 90px; }
+    .partners__banner .partners__logo-wrap .partners__logo {
+      flex-basis: 25%; }
+
+.contacts {
+  padding: 155px; }
+
+.contacts__wrap {
+  display: flex;
+  padding: 150px 50px; }
+
+.contacts__form {
+  flex-basis: 50%;
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
+  flex-wrap: wrap; }
+
+.contacts__info {
+  flex-basis: 50%; }
+
+.contacts__input {
+  border: none; }
+
+.contacts__input::-webkit-input-placeholder {
+  color: #000000;
+  text-transform: uppercase;
+  font-size: 15px;
+  font-family: 'Lato-Regular'; }
+
+.contacts__message {
+  margin-top: 50px; }
+
+body {
+  font-family: sans-serif; }
+
+.title {
+  font-family: 'Lato-Regular';
+  letter-spacing: 5.43px;
+  font-size: 34px;
+  text-transform: uppercase;
+  text-align: center; }
+
+.title_color_white {
+  color: #ffffff; }
+
+.title_color_black {
+  color: #000000;
+  position: relative; }
+
+.title_color_black::after {
+  content: '';
+  display: block;
+  position: absolute;
+  width: 81px;
+  height: 1px;
+  background-color: #000000;
+  top: 82px;
+  left: 515px; }
+
+.title_weight_xl {
+  font-weight: 900; }
+
+.button-wrap {
+  max-width: 220px;
+  margin: 0 auto; }
+
+.button-wrap_after {
+  position: relative; }
+
+.button-wrap_after::after {
+  content: '';
+  display: block;
+  width: 17px;
+  height: 10px;
+  background: url("../assets/img/arrow-down.png") no-repeat center/contain;
+  position: absolute;
+  top: 150px;
+  left: 98px; }
+
+.read-more {
+  cursor: pointer;
+  padding: 11px 54px;
+  background: none;
+  font-family: 'Lato-Regular';
+  font-size: 16px;
+  font-weight: 400;
+  text-transform: uppercase;
+  letter-spacing: 0.67px;
+  margin: 0 auto;
+  transition: ease .25s; }
+
+.read-more_btn_white:hover {
+  background: #fff;
+  color: #464646; }
+
+.read-more_btn_white {
+  color: #ffffff;
+  border: 1px solid #ffffff; }
+
+.read-more_btn_black {
+  color: #000000;
+  border: 1px solid #000000; }
+
+.read-more_btn_black:hover {
+  background: #3c3c3c;
+  color: #fff; }
+
+.nav-menu {
+  display: flex;
+  align-items: center;
+  justify-content: space-between; }
+
+.nav-menu__item {
+  display: block; }
+
+.nav-menu__link {
+  text-decoration: none; }
+
+.nav-menu__link_dark {
+  color: #3c3c3c; }
+
+.nav-menu__link_big {
+  text-transform: uppercase;
+  font-family: "Lato - Bold";
+  font-size: 15px;
+  font-weight: 700; }
+
+.nav-menu__link_big:hover {
+  color: #ada074;
+  text-decoration: none; }
+
+.text {
+  color: #868585;
+  font-family: 'Lato-Regular';
+  font-size: 14px;
+  font-weight: 300;
+  line-height: 25.89px;
+  text-align: center;
+  max-width: 690px; }
+
+.photo-card {
+  flex-basis: 50%;
+  margin-bottom: 15px; }
 
 /*# sourceMappingURL=main.css.map */
